# LigandMPNN

./: .buildinfo  DockerHub_blurb_ligandmpnn.html  DockerHub_blurb_proteinmpnn.html  LICENSE  README.md  contributors_guide.html  data_utils.py  docker.html  examples.html  genindex.html  get_model_params.sh  index.html  installation.html  license_link.html  model_weights_ref.html  objects.inv  overview.html  pyproject.toml  readme_link.html  requirements.txt  run.py  score.py  search.html  searchindex.js
.github/workflows/: documentation.yml  documentation.yml~  test.yml
LigandMPNN/: __init__.py  __main__.py  cli.py  sc_utils.py
RosettaMPNN/: __init__.py  cli.py  sc_utils.py
_sources/: DockerHub_blurb_ligandmpnn.md.txt  DockerHub_blurb_proteinmpnn.md.txt  contributors_guide.md.txt  index.rst.txt  installation.md.txt  overview.md.txt
_static/: custom.css
docs/: #make.bat#
docs/source/: conf.py  conf.py~  contributors_guide.md  docker.rst  docker.rst~  examples.md  index.rst  index.rst~  installation.md  installation.md~  license_link.rst  model_weights_ref.md  overview.md  readme_link.rst~
docs/source/_static/: custom.css~
inputs/: msd_multi_constraint_pdbs.json  msd_pdbs.json
outputs/default/seqs/: 1BC8.fa
test/: test_data_utils.py
test/integration/: msd_multi_constraint_pdbs.json  msd_pdbs.json  test_examples.py  test_hyper.py  test_msd.py  test_score.py  test_symm.py
test/unit/: test_data_utils.py
