[project]
name = "rosettampnn"
version = "0.1.0"
description = "RosettaMPNN: Protein sequence design based on ProteinMPNN and LigandMPNN with additional functionality."
authors = [
    { name = "woodsh17" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "biopython==1.79",
    "filelock==3.13.1",
    "fsspec==2024.3.1",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==1.23.5",
    "ProDy==2.4.1",
    "pyparsing==3.1.1",
    "scipy==1.12.0",
    "sympy==1.12",
    "torch==2.2.1",
    "ml-collections==0.1.1",
    "dm-tree==0.1.8"
]

[tool.setuptools.packages]
find = { include = ["RosettaMPNN*"] }

[project.urls]
Homepage = "https://github.com/woodsh17/RosettaMPNN"
Documentation = "https://woodsh17.github.io/RosettaMPNN/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"