[project]
name = "rosettampnn"
version = "0.1.0"
description = "RosettaMPNN: Protein sequence design based on ProteinMPNN and LigandMPNN with additional functionality."
authors = [
    { name = "woodsh17" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "biopython==1.79",
    "filelock==3.13.1",
    "fsspec==2024.3.1",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==1.23.5",
    "ProDy==2.4.1",
    "pyparsing==3.1.1",
    "scipy==1.12.0",
    "sympy==1.12",
    "torch==2.2.1",
    "triton==2.2.0",
    "typing_extensions==4.10.0",
    "ml-collections==0.1.1",
    "dm-tree==0.1.8",
    # CUDA packages included by default
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.19.3",
    "nvidia-nvjitlink-cu12==12.4.99",
    "nvidia-nvtx-cu12==12.1.105"
]

[project.optional-dependencies]
no-cuda = [
    # everything from dependencies EXCEPT CUDA stuff and triton
    "biopython==1.79",
    "filelock==3.13.1",
    "fsspec==2024.3.1",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==1.23.5",
    "ProDy==2.4.1",
    "pyparsing==3.1.1",
    "scipy==1.12.0",
    "sympy==1.12",
    "torch==2.2.1",
    "typing_extensions==4.10.0",
    "ml-collections==0.1.1",
    "dm-tree==0.1.8"
]

[tool.setuptools.packages]
find = { include = ["RosettaMPNN*"] }

[project.urls]
Homepage = "https://github.com/woodsh17/RosettaMPNN"
Documentation = "https://woodsh17.github.io/RosettaMPNN/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"